--- a/src/lib/i18n/locales/ar-BH/translation.json
+++ b/src/lib/i18n/locales/ar-BH/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": " {{name}} مرحبا",
 	"Help": "مساعدة",
 	"Hide": "أخفاء",
+	"Hide Model": "",
 	"How can I help you today?": "كيف استطيع مساعدتك اليوم؟",
 	"Hybrid Search": "البحث الهجين",
 	"Image Generation (Experimental)": "توليد الصور (تجريبي)",
@@ -483,6 +484,7 @@
 	"short-summary": "ملخص قصير",
 	"Show": "عرض",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "إظهار الاختصارات",
 	"Showcased creativity": "أظهر الإبداع",
 	"sidebar": "الشريط الجانبي",
