--- a/src/lib/i18n/locales/bg-BG/translation.json
+++ b/src/lib/i18n/locales/bg-BG/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "Здравей, {{name}}",
 	"Help": "Помощ",
 	"Hide": "Скрий",
+	"Hide Model": "",
 	"How can I help you today?": "Как мога да ви помогна днес?",
 	"Hybrid Search": "Hybrid Search",
 	"Image Generation (Experimental)": "Генерация на изображения (Експериментално)",
@@ -479,6 +480,7 @@
 	"short-summary": "short-summary",
 	"Show": "Покажи",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "Покажи",
 	"Showcased creativity": "Показана креативност",
 	"sidebar": "sidebar",
