--- a/src/lib/i18n/locales/bn-BD/translation.json
+++ b/src/lib/i18n/locales/bn-BD/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "হ্যালো, {{name}}",
 	"Help": "সহায়তা",
 	"Hide": "লুকান",
+	"Hide Model": "",
 	"How can I help you today?": "আপনাকে আজ কিভাবে সাহায্য করতে পারি?",
 	"Hybrid Search": "হাইব্রিড অনুসন্ধান",
 	"Image Generation (Experimental)": "ইমেজ জেনারেশন (পরিক্ষামূলক)",
@@ -479,6 +480,7 @@
 	"short-summary": "সংক্ষিপ্ত বিবরণ",
 	"Show": "দেখান",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "শর্টকাটগুলো দেখান",
 	"Showcased creativity": "সৃজনশীলতা প্রদর্শন",
 	"sidebar": "সাইডবার",
