--- a/src/lib/i18n/locales/ca-ES/translation.json
+++ b/src/lib/i18n/locales/ca-ES/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "Hola, {{name}}",
 	"Help": "Ajuda",
 	"Hide": "Amaga",
+	"Hide Model": "",
 	"How can I help you today?": "Com et puc ajudar avui?",
 	"Hybrid Search": "Cerca Hibrida",
 	"Image Generation (Experimental)": "Generació d'Imatges (Experimental)",
@@ -480,6 +481,7 @@
 	"short-summary": "resum curt",
 	"Show": "Mostra",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "Mostra dreceres",
 	"Showcased creativity": "Mostra la creativitat",
 	"sidebar": "barra lateral",
