--- a/src/lib/i18n/locales/ceb-PH/translation.json
+++ b/src/lib/i18n/locales/ceb-PH/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "Maayong buntag, {{name}}",
 	"Help": "",
 	"Hide": "Tagoa",
+	"Hide Model": "",
 	"How can I help you today?": "Unsaon nako pagtabang kanimo karon?",
 	"Hybrid Search": "",
 	"Image Generation (Experimental)": "Pagmugna og hulagway (Eksperimento)",
@@ -479,6 +480,7 @@
 	"short-summary": "mubo nga summary",
 	"Show": "Pagpakita",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "Ipakita ang mga shortcut",
 	"Showcased creativity": "",
 	"sidebar": "lateral bar",
