--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "Hallo, {{name}}",
 	"Help": "Hilfe",
 	"Hide": "Verbergen",
+	"Hide Model": "",
 	"How can I help you today?": "Wie kann ich dir heute helfen?",
 	"Hybrid Search": "Hybride Suche",
 	"Image Generation (Experimental)": "Bildgenerierung (experimentell)",
@@ -479,6 +480,7 @@
 	"short-summary": "kurze-zusammenfassung",
 	"Show": "Anzeigen",
 	"Show Admin Details in Account Pending Overlay": "Admin-Details im Account-Pending-Overlay anzeigen",
+	"Show Model": "",
 	"Show shortcuts": "Verknüpfungen anzeigen",
 	"Showcased creativity": "Kreativität zur Schau gestellt",
 	"sidebar": "Seitenleiste",
