--- a/src/lib/i18n/locales/dg-DG/translation.json
+++ b/src/lib/i18n/locales/dg-DG/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "Much helo, {{name}}",
 	"Help": "",
 	"Hide": "Hide",
+	"Hide Model": "",
 	"How can I help you today?": "How can I halp u today?",
 	"Hybrid Search": "",
 	"Image Generation (Experimental)": "Image Wow (Much Experiment)",
@@ -479,6 +480,7 @@
 	"short-summary": "short-summary so short",
 	"Show": "Show much show",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "Show shortcuts much shortcut",
 	"Showcased creativity": "",
 	"sidebar": "sidebar much side",
