--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "Hola, {{name}}",
 	"Help": "Ayuda",
 	"Hide": "Esconder",
+	"Hide Model": "",
 	"How can I help you today?": "¿Cómo puedo ayudarte hoy?",
 	"Hybrid Search": "Búsqueda Híbrida",
 	"Image Generation (Experimental)": "Generación de imágenes (experimental)",
@@ -480,6 +481,7 @@
 	"short-summary": "resumen-corto",
 	"Show": "Mostrar",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "Mostrar atajos",
 	"Showcased creativity": "Mostrar creatividad",
 	"sidebar": "barra lateral",
