--- a/src/lib/i18n/locales/fa-IR/translation.json
+++ b/src/lib/i18n/locales/fa-IR/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "سلام، {{name}}",
 	"Help": "کمک",
 	"Hide": "پنهان",
+	"Hide Model": "",
 	"How can I help you today?": "امروز چطور می توانم کمک تان کنم؟",
 	"Hybrid Search": "جستجوی همزمان",
 	"Image Generation (Experimental)": "تولید تصویر (آزمایشی)",
@@ -479,6 +480,7 @@
 	"short-summary": "خلاصه کوتاه",
 	"Show": "نمایش",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "نمایش میانبرها",
 	"Showcased creativity": "ایده\u200cآفرینی",
 	"sidebar": "نوار کناری",
