--- a/src/lib/i18n/locales/fi-FI/translation.json
+++ b/src/lib/i18n/locales/fi-FI/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "Terve, {{name}}",
 	"Help": "Apua",
 	"Hide": "Piilota",
+	"Hide Model": "",
 	"How can I help you today?": "Kuinka voin auttaa tänään?",
 	"Hybrid Search": "Hybridihaku",
 	"Image Generation (Experimental)": "Kuvagenerointi (kokeellinen)",
@@ -479,6 +480,7 @@
 	"short-summary": "lyhyt-yhteenveto",
 	"Show": "Näytä",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "Näytä pikanäppäimet",
 	"Showcased creativity": "Näytti luovuutta",
 	"sidebar": "sivupalkki",
