--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "Bonjour, {{name}}",
 	"Help": "Aide",
 	"Hide": "Cacher",
+	"Hide Model": "",
 	"How can I help you today?": "Comment puis-je vous aider aujourd'hui ?",
 	"Hybrid Search": "Recherche Hybride",
 	"Image Generation (Experimental)": "Génération d'Image (Expérimental)",
@@ -480,6 +481,7 @@
 	"short-summary": "résumé court",
 	"Show": "Montrer",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "Afficher les raccourcis",
 	"Showcased creativity": "Créativité affichée",
 	"sidebar": "barre latérale",
