--- a/src/lib/i18n/locales/he-IL/translation.json
+++ b/src/lib/i18n/locales/he-IL/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "שלום, {{name}}",
 	"Help": "עזרה",
 	"Hide": "הסתר",
+	"Hide Model": "",
 	"How can I help you today?": "כיצד אוכל לעזור לך היום?",
 	"Hybrid Search": "חיפוש היברידי",
 	"Image Generation (Experimental)": "יצירת תמונות (ניסיוני)",
@@ -480,6 +481,7 @@
 	"short-summary": "סיכום קצר",
 	"Show": "הצג",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "הצג קיצורי דרך",
 	"Showcased creativity": "הצגת יצירתיות",
 	"sidebar": "סרגל צד",
