--- a/src/lib/i18n/locales/hi-IN/translation.json
+++ b/src/lib/i18n/locales/hi-IN/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "नमस्ते, {{name}}",
 	"Help": "मदद",
 	"Hide": "छुपाएं",
+	"Hide Model": "",
 	"How can I help you today?": "आज मैं आपकी कैसे मदद कर सकता हूँ?",
 	"Hybrid Search": "हाइब्रिड खोज",
 	"Image Generation (Experimental)": "छवि निर्माण (प्रायोगिक)",
@@ -479,6 +480,7 @@
 	"short-summary": "संक्षिप्त सारांश",
 	"Show": "दिखाओ",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "शॉर्टकट दिखाएँ",
 	"Showcased creativity": "रचनात्मकता का प्रदर्शन किया",
 	"sidebar": "साइड बार",
