--- a/src/lib/i18n/locales/hr-HR/translation.json
+++ b/src/lib/i18n/locales/hr-HR/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "Bok, {{name}}",
 	"Help": "Pomoć",
 	"Hide": "Sakrij",
+	"Hide Model": "",
 	"How can I help you today?": "Kako vam mogu pomoći danas?",
 	"Hybrid Search": "Hibridna pretraga",
 	"Image Generation (Experimental)": "Generiranje slika (eksperimentalno)",
@@ -480,6 +481,7 @@
 	"short-summary": "kratki sažetak",
 	"Show": "Pokaži",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "Pokaži prečace",
 	"Showcased creativity": "Prikazana kreativnost",
 	"sidebar": "bočna traka",
