--- a/src/lib/i18n/locales/it-IT/translation.json
+++ b/src/lib/i18n/locales/it-IT/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "Ciao, {{name}}",
 	"Help": "Aiuto",
 	"Hide": "Nascondi",
+	"Hide Model": "",
 	"How can I help you today?": "Come posso aiutarti oggi?",
 	"Hybrid Search": "Ricerca ibrida",
 	"Image Generation (Experimental)": "Generazione di immagini (sperimentale)",
@@ -480,6 +481,7 @@
 	"short-summary": "riassunto-breve",
 	"Show": "Mostra",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "Mostra",
 	"Showcased creativity": "Creatività messa in mostra",
 	"sidebar": "barra laterale",
