--- a/src/lib/i18n/locales/ka-GE/translation.json
+++ b/src/lib/i18n/locales/ka-GE/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "გამარჯობა, {{name}}",
 	"Help": "დახმარება",
 	"Hide": "დამალვა",
+	"Hide Model": "",
 	"How can I help you today?": "როგორ შემიძლია დაგეხმარო დღეს?",
 	"Hybrid Search": "ჰიბრიდური ძებნა",
 	"Image Generation (Experimental)": "სურათების გენერაცია (ექსპერიმენტული)",
@@ -479,6 +480,7 @@
 	"short-summary": "მოკლე შინაარსი",
 	"Show": "ჩვენება",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "მალსახმობების ჩვენება",
 	"Showcased creativity": "ჩვენებული ქონება",
 	"sidebar": "საიდბარი",
