--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "안녕하세요, {{name}}",
 	"Help": "도움말",
 	"Hide": "숨기기",
+	"Hide Model": "",
 	"How can I help you today?": "오늘 어떻게 도와드릴까요?",
 	"Hybrid Search": "하이브리드 검색",
 	"Image Generation (Experimental)": "이미지 생성(실험적)",
@@ -479,6 +480,7 @@
 	"short-summary": "간단한 요약",
 	"Show": "보이기",
 	"Show Admin Details in Account Pending Overlay": "사용자용 계정 보류 설명창에, 관리자 상세 정보 노출",
+	"Show Model": "",
 	"Show shortcuts": "단축키 보기",
 	"Showcased creativity": "창의성 발휘",
 	"sidebar": "사이드바",
