--- a/src/lib/i18n/locales/lt-LT/translation.json
+++ b/src/lib/i18n/locales/lt-LT/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "Sveiki, {{name}}",
 	"Help": "Pagalba",
 	"Hide": "Paslėpti",
+	"Hide Model": "",
 	"How can I help you today?": "Kuo galėčiau Jums padėti ?",
 	"Hybrid Search": "Hibridinė paieška",
 	"Image Generation (Experimental)": "Vaizdų generavimas (eksperimentinis)",
@@ -481,6 +482,7 @@
 	"short-summary": "trumpinys",
 	"Show": "Rodyti",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "Rodyti trumpinius",
 	"Showcased creativity": "Kūrybingų užklausų paroda",
 	"sidebar": "šoninis meniu",
