--- a/src/lib/i18n/locales/nb-NO/translation.json
+++ b/src/lib/i18n/locales/nb-NO/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "Hei, {{name}}",
 	"Help": "Hjelp",
 	"Hide": "Skjul",
+	"Hide Model": "",
 	"How can I help you today?": "Hvordan kan jeg hjelpe deg i dag?",
 	"Hybrid Search": "Hybrid-søk",
 	"Image Generation (Experimental)": "Bildegenerering (Eksperimentell)",
@@ -479,6 +480,7 @@
 	"short-summary": "kort sammendrag",
 	"Show": "Vis",
 	"Show Admin Details in Account Pending Overlay": "Vis administratordetaljer i ventende kontooverlay",
+	"Show Model": "",
 	"Show shortcuts": "Vis snarveier",
 	"Showcased creativity": "Vist frem kreativitet",
 	"sidebar": "sidefelt",
