--- a/src/lib/i18n/locales/nl-NL/translation.json
+++ b/src/lib/i18n/locales/nl-NL/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "Hallo, {{name}}",
 	"Help": "Help",
 	"Hide": "Verberg",
+	"Hide Model": "",
 	"How can I help you today?": "Hoe kan ik je vandaag helpen?",
 	"Hybrid Search": "Hybride Zoeken",
 	"Image Generation (Experimental)": "Afbeelding Generatie (Experimenteel)",
@@ -479,6 +480,7 @@
 	"short-summary": "korte-samenvatting",
 	"Show": "Toon",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "Toon snelkoppelingen",
 	"Showcased creativity": "Tooncase creativiteit",
 	"sidebar": "sidebar",
