--- a/src/lib/i18n/locales/pa-IN/translation.json
+++ b/src/lib/i18n/locales/pa-IN/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "ਸਤ ਸ੍ਰੀ ਅਕਾਲ, {{name}}",
 	"Help": "ਮਦਦ",
 	"Hide": "ਲੁਕਾਓ",
+	"Hide Model": "",
 	"How can I help you today?": "ਮੈਂ ਅੱਜ ਤੁਹਾਡੀ ਕਿਵੇਂ ਮਦਦ ਕਰ ਸਕਦਾ ਹਾਂ?",
 	"Hybrid Search": "ਹਾਈਬ੍ਰਿਡ ਖੋਜ",
 	"Image Generation (Experimental)": "ਚਿੱਤਰ ਜਨਰੇਸ਼ਨ (ਪਰਮਾਣੂਕ੍ਰਿਤ)",
@@ -479,6 +480,7 @@
 	"short-summary": "ਛੋਟੀ-ਸੰਖੇਪ",
 	"Show": "ਦਿਖਾਓ",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "ਸ਼ਾਰਟਕਟ ਦਿਖਾਓ",
 	"Showcased creativity": "ਸਿਰਜਣਾਤਮਕਤਾ ਦਿਖਾਈ",
 	"sidebar": "ਸਾਈਡਬਾਰ",
