--- a/src/lib/i18n/locales/pl-PL/translation.json
+++ b/src/lib/i18n/locales/pl-PL/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "Witaj, {{name}}",
 	"Help": "Pomoc",
 	"Hide": "Ukryj",
+	"Hide Model": "",
 	"How can I help you today?": "Jak mogę Ci dzisiaj pomóc?",
 	"Hybrid Search": "Szukanie hybrydowe",
 	"Image Generation (Experimental)": "Generowanie obrazu (eksperymentalne)",
@@ -481,6 +482,7 @@
 	"short-summary": "Krótkie podsumowanie",
 	"Show": "Pokaż",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "Pokaż skróty",
 	"Showcased creativity": "Pokaz kreatywności",
 	"sidebar": "Panel boczny",
