--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "Привет, {{name}}",
 	"Help": "Помощь",
 	"Hide": "Скрыть",
+	"Hide Model": "",
 	"How can I help you today?": "Чем я могу помочь вам сегодня?",
 	"Hybrid Search": "Гибридная поисковая система",
 	"Image Generation (Experimental)": "Генерация изображений (Экспериментально)",
@@ -481,6 +482,7 @@
 	"short-summary": "краткое описание",
 	"Show": "Показать",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "Показать клавиатурные сокращения",
 	"Showcased creativity": "Показать творчество",
 	"sidebar": "боковая панель",
