--- a/src/lib/i18n/locales/sr-RS/translation.json
+++ b/src/lib/i18n/locales/sr-RS/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "Здраво, {{name}}",
 	"Help": "Помоћ",
 	"Hide": "Сакриј",
+	"Hide Model": "",
 	"How can I help you today?": "Како могу да вам помогнем данас?",
 	"Hybrid Search": "Хибридна претрага",
 	"Image Generation (Experimental)": "Стварање слика (експериментално)",
@@ -480,6 +481,7 @@
 	"short-summary": "кратак сажетак",
 	"Show": "Прикажи",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "Прикажи пречице",
 	"Showcased creativity": "Приказана креативност",
 	"sidebar": "бочна трака",
