--- a/src/lib/i18n/locales/sv-SE/translation.json
+++ b/src/lib/i18n/locales/sv-SE/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "Hej, {{name}}",
 	"Help": "Hjälp",
 	"Hide": "Dölj",
+	"Hide Model": "",
 	"How can I help you today?": "Hur kan jag hjälpa dig idag?",
 	"Hybrid Search": "Hybrid sökning",
 	"Image Generation (Experimental)": "Bildgenerering (experimentell)",
@@ -479,6 +480,7 @@
 	"short-summary": "kort sammanfattning",
 	"Show": "Visa",
 	"Show Admin Details in Account Pending Overlay": "Visa administratörsinformation till väntande konton",
+	"Show Model": "",
 	"Show shortcuts": "Visa genvägar",
 	"Showcased creativity": "Visade kreativitet",
 	"sidebar": "sidofält",
