--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "Merhaba, {{name}}",
 	"Help": "Yardım",
 	"Hide": "Gizle",
+	"Hide Model": "",
 	"How can I help you today?": "Bugün size nasıl yardımcı olabilirim?",
 	"Hybrid Search": "Karma Arama",
 	"Image Generation (Experimental)": "Görüntü Oluşturma (Deneysel)",
@@ -479,6 +480,7 @@
 	"short-summary": "kısa-özet",
 	"Show": "Göster",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "Kısayolları göster",
 	"Showcased creativity": "Sergilenen yaratıcılık",
 	"sidebar": "kenar çubuğu",
