--- a/src/lib/i18n/locales/uk-UA/translation.json
+++ b/src/lib/i18n/locales/uk-UA/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "Привіт, {{name}}",
 	"Help": "Допоможіть",
 	"Hide": "Приховати",
+	"Hide Model": "",
 	"How can I help you today?": "Чим я можу допомогти вам сьогодні?",
 	"Hybrid Search": "Гібридний пошук",
 	"Image Generation (Experimental)": "Генерування зображень (експериментально)",
@@ -481,6 +482,7 @@
 	"short-summary": "короткий зміст",
 	"Show": "Показати",
 	"Show Admin Details in Account Pending Overlay": "Відобразити дані адміна у вікні очікування облікового запису",
+	"Show Model": "",
 	"Show shortcuts": "Показати клавіатурні скорочення",
 	"Showcased creativity": "Продемонстрований креатив",
 	"sidebar": "бокова панель",
