--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "Xin chào {{name}}",
 	"Help": "Trợ giúp",
 	"Hide": "Ẩn",
+	"Hide Model": "",
 	"How can I help you today?": "Tôi có thể giúp gì cho bạn hôm nay?",
 	"Hybrid Search": "Tìm kiếm Hybrid",
 	"Image Generation (Experimental)": "Tạo ảnh (thử nghiệm)",
@@ -478,6 +479,7 @@
 	"short-summary": "tóm tắt ngắn",
 	"Show": "Hiển thị",
 	"Show Admin Details in Account Pending Overlay": "Hiển thị thông tin của Quản trị viên trên màn hình hiển thị Tài khoản đang chờ xử lý",
+	"Show Model": "",
 	"Show shortcuts": "Hiển thị phím tắt",
 	"Showcased creativity": "Thể hiện sự sáng tạo",
 	"sidebar": "thanh bên",
