--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "你好，{{name}}",
 	"Help": "幫助",
 	"Hide": "隱藏",
+	"Hide Model": "",
 	"How can I help you today?": "今天能為你做什麼？",
 	"Hybrid Search": "混合搜索",
 	"Image Generation (Experimental)": "圖像生成（實驗功能）",
@@ -478,6 +479,7 @@
 	"short-summary": "簡短摘要",
 	"Show": "顯示",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "顯示快速鍵",
 	"Showcased creativity": "展示創造性",
 	"sidebar": "側邊欄",
