--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "",
 	"Help": "",
 	"Hide": "",
+	"Hide Model": "",
 	"How can I help you today?": "",
 	"Hybrid Search": "",
 	"Image Generation (Experimental)": "",
@@ -479,6 +480,7 @@
 	"short-summary": "",
 	"Show": "",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "",
 	"Showcased creativity": "",
 	"sidebar": "",
