--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "こんにちは、{{name}} さん",
 	"Help": "ヘルプ",
 	"Hide": "非表示",
+	"Hide Model": "",
 	"How can I help you today?": "今日はどのようにお手伝いしましょうか？",
 	"Hybrid Search": "ブリッジ検索",
 	"Image Generation (Experimental)": "画像生成 (実験的)",
@@ -478,6 +479,7 @@
 	"short-summary": "short-summary",
 	"Show": "表示",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "表示",
 	"Showcased creativity": "創造性を披露",
 	"sidebar": "サイドバー",
