--- a/src/lib/i18n/locales/pt-BR/translation.json
+++ b/src/lib/i18n/locales/pt-BR/translation.json
@@ -258,6 +258,7 @@
 	"Hello, {{name}}": "Olá, {{name}}",
 	"Help": "Ajuda",
 	"Hide": "Ocultar",
+	"Hide Model": "",
 	"How can I help you today?": "Como posso ajudá-lo hoje?",
 	"Hybrid Search": "Pesquisa Híbrida",
 	"Image Generation (Experimental)": "Geração de Imagens (Experimental)",
@@ -480,6 +481,7 @@
 	"short-summary": "resumo-curto",
 	"Show": "Mostrar",
 	"Show Admin Details in Account Pending Overlay": "",
+	"Show Model": "",
 	"Show shortcuts": "Mostrar",
 	"Showcased creativity": "Criatividade Exibida",
 	"sidebar": "barra lateral",
