--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -82,9 +82,9 @@
 	"Capabilities": "能力",
 	"Change Password": "更改密码",
 	"Chat": "对话",
-	"Chat Background Image": "",
+	"Chat Background Image": "对话背景图片",
 	"Chat Bubble UI": "气泡样式对话",
-	"Chat direction": "对话文字方向",
+	"Chat direction": "对话样式方向",
 	"Chat History": "对话历史记录",
 	"Chat History is off for this browser.": "此浏览器已关闭对话历史记录功能。",
 	"Chats": "对话",
@@ -258,7 +258,7 @@
 	"Hello, {{name}}": "你好，{{name}}",
 	"Help": "帮助",
 	"Hide": "隐藏",
-	"Hide Model": "",
+	"Hide Model": "隐藏模型",
 	"How can I help you today?": "今天我能帮你做些什么？",
 	"Hybrid Search": "混合搜索",
 	"Image Generation (Experimental)": "图像生成（实验性）",
@@ -411,7 +411,7 @@
 	"Reranking Model": "重排模型",
 	"Reranking model disabled": "重排模型已禁用",
 	"Reranking model set to \"{{reranking_model}}\"": "重排模型设置为 \"{{reranking_model}}\"",
-	"Reset": "",
+	"Reset": "重置",
 	"Reset Upload Directory": "重置上传目录",
 	"Reset Vector Storage": "重置向量存储",
 	"Response AutoCopy to Clipboard": "自动复制回复到剪贴板",
@@ -479,7 +479,7 @@
 	"short-summary": "简短总结",
 	"Show": "显示",
 	"Show Admin Details in Account Pending Overlay": "在用户待激活界面中显示管理员邮箱等详细信息",
-	"Show Model": "",
+	"Show Model": "显示模型",
 	"Show shortcuts": "显示快捷方式",
 	"Showcased creativity": "很有创意",
 	"sidebar": "侧边栏",
@@ -546,13 +546,13 @@
 	"Type": "类型",
 	"Type Hugging Face Resolve (Download) URL": "输入 Hugging Face 解析（下载）URL",
 	"Uh-oh! There was an issue connecting to {{provider}}.": "糟糕！连接到 {{provider}} 时出现问题。",
-	"UI": "",
+	"UI": "界面",
 	"Unknown File Type '{{file_type}}', but accepting and treating as plain text": "未知文件类型'{{file_type}}'，将视为纯文本进行处理",
 	"Update": "更新",
 	"Update and Copy Link": "更新和复制链接",
 	"Update password": "更新密码",
 	"Updated at": "更新于",
-	"Upload": "",
+	"Upload": "上传",
 	"Upload a GGUF model": "上传一个 GGUF 模型",
 	"Upload Files": "上传文件",
 	"Upload Pipeline": "上传 Pipeline",
@@ -571,7 +571,7 @@
 	"variable": "变量",
 	"variable to have them replaced with clipboard content.": "变量将被剪贴板内容替换。",
 	"Version": "版本",
-	"Voice": "",
+	"Voice": "语音",
 	"Warning": "警告",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "警告：如果您修改了语义向量模型，则需要重新导入所有文档。",
 	"Web": "网页",
