--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -12,9 +12,9 @@
 	"a user": "un usuario",
 	"About": "Sobre nosotros",
 	"Account": "Cuenta",
-	"Account Activation Pending": "",
+	"Account Activation Pending": "Activación de cuenta pendiente",
 	"Accurate information": "Información precisa",
-	"Active Users": "",
+	"Active Users": "Usuarios activos",
 	"Add": "Agregar",
 	"Add a model id": "Adición de un identificador de modelo",
 	"Add a short description about what this model does": "Agregue una breve descripción sobre lo que hace este modelo",
@@ -30,10 +30,10 @@
 	"Add User": "Agregar Usuario",
 	"Adjusting these settings will apply changes universally to all users.": "Ajustar estas opciones aplicará los cambios universalmente a todos los usuarios.",
 	"admin": "admin",
-	"Admin": "",
+	"Admin": "Admin",
 	"Admin Panel": "Panel de Administración",
 	"Admin Settings": "Configuración de Administrador",
-	"Admins have access to all tools at all times; users need tools assigned per model in the workspace.": "",
+	"Admins have access to all tools at all times; users need tools assigned per model in the workspace.": "Admins tienen acceso a todas las herramientas en todo momento; los usuarios necesitan herramientas asignadas por modelo en el espacio de trabajo.",
 	"Advanced Parameters": "Parámetros Avanzados",
 	"Advanced Params": "Parámetros avanzados",
 	"all": "todo",
@@ -41,9 +41,9 @@
 	"All Users": "Todos los Usuarios",
 	"Allow": "Permitir",
 	"Allow Chat Deletion": "Permitir Borrar Chats",
-	"Allow non-local voices": "",
-	"Allow User Location": "",
-	"Allow Voice Interruption in Call": "",
+	"Allow non-local voices": "Permitir voces no locales",
+	"Allow User Location": "Permitir Ubicación del Usuario",
+	"Allow Voice Interruption in Call": "Permitir interrupción de voz en llamada",
 	"alphanumeric characters and hyphens": "caracteres alfanuméricos y guiones",
 	"Already have an account?": "¿Ya tienes una cuenta?",
 	"an assistant": "un asistente",
@@ -62,7 +62,7 @@
 	"Attach file": "Adjuntar archivo",
 	"Attention to detail": "Detalle preciso",
 	"Audio": "Audio",
-	"Audio settings updated successfully": "",
+	"Audio settings updated successfully": "Opciones de audio actualizadas correctamente",
 	"August": "Agosto",
 	"Auto-playback response": "Respuesta de reproducción automática",
 	"AUTOMATIC1111 Base URL": "Dirección URL de AUTOMATIC1111",
@@ -77,14 +77,14 @@
 	"Being lazy": "Ser perezoso",
 	"Brave Search API Key": "Clave de API de Brave Search",
 	"Bypass SSL verification for Websites": "Desactivar la verificación SSL para sitios web",
-	"Call": "",
-	"Call feature is not supported when using Web STT engine": "",
-	"Camera": "",
+	"Call": "Llamada",
+	"Call feature is not supported when using Web STT engine": "La funcionalidad de llamada no puede usarse junto con el motor de STT Web",
+	"Camera": "Cámara",
 	"Cancel": "Cancelar",
 	"Capabilities": "Capacidades",
 	"Change Password": "Cambia la Contraseña",
 	"Chat": "Chat",
-	"Chat Background Image": "",
+	"Chat Background Image": "Imágen de fondo del Chat",
 	"Chat Bubble UI": "Burbuja de chat UI",
 	"Chat direction": "Dirección del Chat",
 	"Chat History": "Historial del Chat",
@@ -98,35 +98,35 @@
 	"Chunk Params": "Parámetros de fragmentos",
 	"Chunk Size": "Tamaño de fragmentos",
 	"Citation": "Cita",
-	"Clear memory": "",
+	"Clear memory": "Liberar memoria",
 	"Click here for help.": "Presiona aquí para obtener ayuda.",
 	"Click here to": "Presiona aquí para",
-	"Click here to download user import template file.": "",
+	"Click here to download user import template file.": "Presiona aquí para descargar el archivo de plantilla de importación de usuario.",
 	"Click here to select": "Presiona aquí para seleccionar",
 	"Click here to select a csv file.": "Presiona aquí para seleccionar un archivo csv.",
-	"Click here to select a py file.": "",
+	"Click here to select a py file.": "Presiona aquí para seleccionar un archivo py.",
 	"Click here to select documents.": "Presiona aquí para seleccionar documentos",
 	"click here.": "Presiona aquí.",
 	"Click on the user role button to change a user's role.": "Presiona en el botón de roles del usuario para cambiar su rol.",
 	"Clipboard write permission denied. Please check your browser settings to grant the necessary access.": "",
-	"Clone": "Clon",
+	"Clone": "Clonar",
 	"Close": "Cerrar",
-	"Code formatted successfully": "",
+	"Code formatted successfully": "Se ha formateado correctamente el código.",
 	"Collection": "Colección",
 	"ComfyUI": "ComfyUI",
 	"ComfyUI Base URL": "ComfyUI Base URL",
 	"ComfyUI Base URL is required.": "ComfyUI Base URL es requerido.",
 	"Command": "Comando",
 	"Concurrent Requests": "Solicitudes simultáneas",
-	"Confirm": "",
+	"Confirm": "Confirmar",
 	"Confirm Password": "Confirmar Contraseña",
-	"Confirm your action": "",
+	"Confirm your action": "Confirma tu acción",
 	"Connections": "Conexiones",
-	"Contact Admin for WebUI Access": "",
+	"Contact Admin for WebUI Access": "Contacta el administrador para obtener acceso al WebUI",
 	"Content": "Contenido",
 	"Context Length": "Longitud del contexto",
 	"Continue Response": "Continuar Respuesta",
-	"Continue with {{provider}}": "",
+	"Continue with {{provider}}": "Continuar con {{provider}}",
 	"Copied shared chat URL to clipboard!": "¡URL de chat compartido copiado al portapapeles!",
 	"Copy": "Copiar",
 	"Copy last code block": "Copia el último bloque de código",
@@ -139,14 +139,14 @@
 	"Create new secret key": "Crear una nueva clave secreta",
 	"Created at": "Creado en",
 	"Created At": "Creado en",
-	"Created by": "",
-	"CSV Import": "",
+	"Created by": "Creado por",
+	"CSV Import": "Importa un CSV",
 	"Current Model": "Modelo Actual",
 	"Current Password": "Contraseña Actual",
 	"Custom": "Personalizado",
 	"Customize models for a specific purpose": "Personalizar modelos para un propósito específico",
 	"Dark": "Oscuro",
-	"Dashboard": "",
+	"Dashboard": "Panel de Control",
 	"Database": "Base de datos",
 	"December": "Diciembre",
 	"Default": "Por defecto",
@@ -162,33 +162,33 @@
 	"Delete All Chats": "Eliminar todos los chats",
 	"Delete chat": "Borrar chat",
 	"Delete Chat": "Borrar Chat",
-	"Delete chat?": "",
+	"Delete chat?": "Borrar el chat?",
 	"delete this link": "Borrar este enlace",
 	"Delete User": "Borrar Usuario",
 	"Deleted {{deleteModelTag}}": "Se borró {{deleteModelTag}}",
 	"Deleted {{name}}": "Eliminado {{nombre}}",
 	"Description": "Descripción",
 	"Didn't fully follow instructions": "No siguió las instrucciones",
-	"Discover a function": "",
+	"Discover a function": "Descubre una función",
 	"Discover a model": "Descubrir un modelo",
 	"Discover a prompt": "Descubre un Prompt",
-	"Discover a tool": "",
-	"Discover, download, and explore custom functions": "",
+	"Discover a tool": "Descubre una herramienta",
+	"Discover, download, and explore custom functions": "Descubre, descarga y explora funciones personalizadas",
 	"Discover, download, and explore custom prompts": "Descubre, descarga, y explora Prompts personalizados",
-	"Discover, download, and explore custom tools": "",
+	"Discover, download, and explore custom tools": "Descubre, descarga y explora herramientas personalizadas",
 	"Discover, download, and explore model presets": "Descubre, descarga y explora ajustes preestablecidos de modelos",
-	"Dismissible": "",
-	"Display Emoji in Call": "",
+	"Dismissible": "Desestimable",
+	"Display Emoji in Call": "Muestra Emoji en llamada",
 	"Display the username instead of You in the Chat": "Mostrar el nombre de usuario en lugar de Usted en el chat",
 	"Document": "Documento",
 	"Document Settings": "Configuración del Documento",
-	"Documentation": "",
+	"Documentation": "Documentación",
 	"Documents": "Documentos",
 	"does not make any external connections, and your data stays securely on your locally hosted server.": "no realiza ninguna conexión externa y sus datos permanecen seguros en su servidor alojado localmente.",
 	"Don't Allow": "No Permitir",
 	"Don't have an account?": "¿No tienes una cuenta?",
 	"Don't like the style": "No te gusta el estilo?",
-	"Done": "",
+	"Done": "Hecho",
 	"Download": "Descargar",
 	"Download canceled": "Descarga cancelada",
 	"Download Database": "Descarga la Base de Datos",
@@ -196,10 +196,10 @@
 	"e.g. '30s','10m'. Valid time units are 's', 'm', 'h'.": "p.ej. '30s','10m'. Unidades válidas de tiempo son 's', 'm', 'h'.",
 	"Edit": "Editar",
 	"Edit Doc": "Editar Documento",
-	"Edit Memory": "",
+	"Edit Memory": "Editar Memoria",
 	"Edit User": "Editar Usuario",
 	"Email": "Email",
-	"Embedding Batch Size": "",
+	"Embedding Batch Size": "Tamaño de Embedding",
 	"Embedding Model": "Modelo de Embedding",
 	"Embedding Model Engine": "Motor de Modelo de Embedding",
 	"Embedding model set to \"{{embedding_model}}\"": "Modelo de Embedding configurado a \"{{embedding_model}}\"",
@@ -223,10 +223,10 @@
 	"Enter Score": "Ingrese la puntuación",
 	"Enter Searxng Query URL": "Introduzca la URL de consulta de Searxng",
 	"Enter Serper API Key": "Ingrese la clave API de Serper",
-	"Enter Serply API Key": "",
+	"Enter Serply API Key": "Ingrese la clave API de Serply",
 	"Enter Serpstack API Key": "Ingrese la clave API de Serpstack",
 	"Enter stop sequence": "Ingrese la secuencia de parada",
-	"Enter Tavily API Key": "",
+	"Enter Tavily API Key": "Ingrese la clave API de Tavily",
 	"Enter Top K": "Ingrese el Top K",
 	"Enter URL (e.g. http://127.0.0.1:7860/)": "Ingrese la URL (p.ej., http://127.0.0.1:7860/)",
 	"Enter URL (e.g. http://localhost:11434)": "Ingrese la URL (p.ej., http://localhost:11434)",
@@ -238,36 +238,36 @@
 	"Experimental": "Experimental",
 	"Export": "Exportar",
 	"Export All Chats (All Users)": "Exportar todos los chats (Todos los usuarios)",
-	"Export chat (.json)": "",
+	"Export chat (.json)": "Exportar chat (.json)",
 	"Export Chats": "Exportar Chats",
 	"Export Documents Mapping": "Exportar el mapeo de documentos",
-	"Export Functions": "",
-	"Export LiteLLM config.yaml": "",
-	"Export Models": "Modelos de exportación",
+	"Export Functions": "Exportar Funciones",
+	"Export LiteLLM config.yaml": "Exportar LiteLLM config.yaml",
+	"Export Models": "Exportar Modelos",
 	"Export Prompts": "Exportar Prompts",
-	"Export Tools": "",
-	"External Models": "",
+	"Export Tools": "Exportar Herramientas",
+	"External Models": "Modelos Externos",
 	"Failed to create API Key.": "No se pudo crear la clave API.",
 	"Failed to read clipboard contents": "No se pudo leer el contenido del portapapeles",
-	"Failed to update settings": "",
+	"Failed to update settings": "Falla al actualizar los ajustes",
 	"February": "Febrero",
 	"Feel free to add specific details": "Libre de agregar detalles específicos",
-	"File": "",
+	"File": "Archivo",
 	"File Mode": "Modo de archivo",
 	"File not found.": "Archivo no encontrado.",
-	"Filters": "",
+	"Filters": "Filtros",
 	"Fingerprint spoofing detected: Unable to use initials as avatar. Defaulting to default profile image.": "Se detectó suplantación de huellas: No se pueden usar las iniciales como avatar. Por defecto se utiliza la imagen de perfil predeterminada.",
 	"Fluidly stream large external response chunks": "Transmita con fluidez grandes fragmentos de respuesta externa",
 	"Focus chat input": "Enfoca la entrada del chat",
 	"Followed instructions perfectly": "Siguió las instrucciones perfectamente",
-	"Form": "",
+	"Form": "De",
 	"Format your variables using square brackets like this:": "Formatea tus variables usando corchetes de la siguiente manera:",
 	"Frequency Penalty": "Penalización de frecuencia",
-	"Function created successfully": "",
-	"Function deleted successfully": "",
-	"Function updated successfully": "",
-	"Functions": "",
-	"Functions imported successfully": "",
+	"Function created successfully": "Función creada exitosamente",
+	"Function deleted successfully": "Función borrada exitosamente",
+	"Function updated successfully": "Función actualizada exitosamente",
+	"Functions": "Funciones",
+	"Functions imported successfully": "Funciones importadas exitosamente",
 	"General": "General",
 	"General Settings": "Opciones Generales",
 	"Generate Image": "",
@@ -281,7 +281,7 @@
 	"Hello, {{name}}": "Hola, {{name}}",
 	"Help": "Ayuda",
 	"Hide": "Esconder",
-	"Hide Model": "",
+	"Hide Model": "Esconder Modelo",
 	"How can I help you today?": "¿Cómo puedo ayudarte hoy?",
 	"Hybrid Search": "Búsqueda Híbrida",
 	"Image Generation (Experimental)": "Generación de imágenes (experimental)",
@@ -290,15 +290,15 @@
 	"Images": "Imágenes",
 	"Import Chats": "Importar chats",
 	"Import Documents Mapping": "Importar Mapeo de Documentos",
-	"Import Functions": "",
+	"Import Functions": "Importar Funciones",
 	"Import Models": "Importar modelos",
 	"Import Prompts": "Importar Prompts",
-	"Import Tools": "",
+	"Import Tools": "Importar Herramientas",
 	"Include `--api` flag when running stable-diffusion-webui": "Incluir el indicador `--api` al ejecutar stable-diffusion-webui",
 	"Info": "Información",
 	"Input commands": "Ingresar comandos",
 	"Install from Github URL": "Instalar desde la URL de Github",
-	"Instant Auto-Send After Voice Transcription": "",
+	"Instant Auto-Send After Voice Transcription": "Auto-Enviar Después de la Transcripción de Voz",
 	"Interface": "Interfaz",
 	"Invalid Tag": "Etiqueta Inválida",
 	"January": "Enero",
@@ -311,32 +311,32 @@
 	"JWT Token": "Token JWT",
 	"Keep Alive": "Mantener Vivo",
 	"Keyboard shortcuts": "Atajos de teclado",
-	"Knowledge": "",
+	"Knowledge": "Conocimiento",
 	"Language": "Lenguaje",
 	"Last Active": "Última Actividad",
-	"Last Modified": "",
+	"Last Modified": "Modificado por última vez",
 	"Light": "Claro",
-	"Listening...": "",
+	"Listening...": "Escuchando...",
 	"LLMs can make mistakes. Verify important information.": "Los LLM pueden cometer errores. Verifica la información importante.",
-	"Local Models": "",
+	"Local Models": "Modelos locales",
 	"LTR": "LTR",
 	"Made by OpenWebUI Community": "Hecho por la comunidad de OpenWebUI",
 	"Make sure to enclose them with": "Asegúrese de adjuntarlos con",
-	"Manage": "",
+	"Manage": "Gestionar",
 	"Manage Models": "Administrar Modelos",
 	"Manage Ollama Models": "Administrar Modelos Ollama",
 	"Manage Pipelines": "Administrar canalizaciones",
-	"Manage Valves": "",
+	"Manage Valves": "Gestionar Valves",
 	"March": "Marzo",
 	"Max Tokens (num_predict)": "Máximo de fichas (num_predict)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "Se pueden descargar un máximo de 3 modelos simultáneamente. Por favor, inténtelo de nuevo más tarde.",
 	"May": "Mayo",
 	"Memories accessible by LLMs will be shown here.": "Las memorias accesibles por los LLMs se mostrarán aquí.",
 	"Memory": "Memoria",
-	"Memory added successfully": "",
-	"Memory cleared successfully": "",
-	"Memory deleted successfully": "",
-	"Memory updated successfully": "",
+	"Memory added successfully": "Memoria añadida correctamente",
+	"Memory cleared successfully": "Memoria liberada correctamente",
+	"Memory deleted successfully": "Memoria borrada correctamente",
+	"Memory updated successfully": "Memoria actualizada correctamente",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Los mensajes que envíe después de crear su enlace no se compartirán. Los usuarios con el enlace podrán ver el chat compartido.",
 	"Minimum Score": "Puntuación mínima",
 	"Mirostat": "Mirostat",
